# burn-rl-examples

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: cicd.yml
burn-rl/: Cargo.toml
burn-rl/src/: lib.rs
burn-rl/src/agent/: dqn.rs  mod.rs
burn-rl/src/agent/dqn/: agent.rs  config.rs  memory.rs  mod.rs  model.rs
burn-rl/src/agent/ppo/: agent.rs  config.rs  mod.rs  model.rs
burn-rl/src/agent/sac/: agent.rs  config.rs  mod.rs  model.rs  optimizer.rs
burn-rl/src/base/: action.rs  agent.rs  environment.rs  memory.rs  mod.rs  model.rs  snapshot.rs  transition.rs
burn-rl/src/environment/: cart_pole.rs  mod.rs  mountain_car.rs
burn-rl/src/utils/: mod.rs
examples/: Cargo.toml
examples/src/: dqn.rs  main.rs  ppo.rs  sac.rs  utils.rs
src/: main.rs
src/agent/: dqn.rs  mod.rs  random.rs
src/base/: action.rs  agent.rs  memory.rs  mod.rs  model.rs  snapshot.rs  state.rs
src/components/: agent.rs  env.rs  mod.rs
src/demo/: cart_pole_agent.rs  cart_pole_demo.rs  mod.rs
src/env/: car_pole.rs  cart_pole.rs  demo.rs  mod.rs
src/utils/: mod.rs  smooth_l1.rs  snapshot.rs
